[gd_scene load_steps=4 format=3 uid="uid://uh2bgk2dmj0n"]

[ext_resource type="Script" uid="uid://b65oukgby0tvb" path="res://scripts/simple_choice.gd" id="1_n16kn"]
[ext_resource type="Texture2D" uid="uid://bjy8lleabrl4i" path="res://art/Background.png" id="1_oe1ob"]
[ext_resource type="Texture2D" uid="uid://8ns70xk4ruk5" path="res://art/ui/cancel.png" id="3_netu1"]

[node name="SimpleChoice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n16kn")

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
scale = Vector2(115, 65)
texture = ExtResource("1_oe1ob")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 2

[node name="VegieButton" type="Button" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
text = "Gemüse"

[node name="OfficeButton" type="Button" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
text = "Büro"

[node name="VehicleButton" type="Button" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
text = "Fahrzeuge"

[node name="AnimalButton" type="Button" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
text = "Tiere"

[node name="ExitButton" type="Button" parent="."]
unique_name_in_owner = true
z_index = 500
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -92.0
offset_top = 40.0
offset_right = -42.0
offset_bottom = 90.0
grow_horizontal = 0
tooltip_text = "Beenden"
focus_mode = 0
icon = ExtResource("3_netu1")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="MarginContainer/GridContainer/VegieButton" to="." method="_on_vegie_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/OfficeButton" to="." method="_on_office_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/VehicleButton" to="." method="_on_vehicle_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/AnimalButton" to="." method="_on_animal_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
